2007-06-08 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl :
	  Allow for empty labels in --print-labels.

2007-06-05 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl :
	  Allow for whitespace in MB model name.

2007-05-07 Mark Grondona <mgrondona@llnl.gov>
	* src/lib/edac.3.in, src/util/edac-util.1.in, 
	  src/util/edac-ctl.8.in :
	  Add manpages for libedac, edac-util, and edac-ctl.

	* src/lib/Makefile.am, src/util/Makefile.am,
	  configure.ac : Changes for new manpages.

	* : tag version 0.9.

2007-05-07 Mark Grondona <mgrondona@llnl.gov>

	* : Added official UCRL number.

2007-04-25 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-util.c : Issue "No errors to report." message to
	  stdout, not stderr.

	* : tag version 0.8.

2007-04-18 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-util.c : Default report changed to report any
	  DIMM (or unknown location) with an error count. This is more
	  useful for diagnosis and thus makes sense to be the defualt.
	  Old default changed to "simple" report.

	* src/util/edac-util.c : Also report "noinfo" CE and UE count
	  in full report.

	* src/etc/labels.db : Switch DIMMC and DIMMD locations for H8QM8.

	* src/util/edac-ctl : Add registered labels to --print-labels
	  output and change output format.

	* : tag version 0.7. 

2007-03-15 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl : Just ignore sysfs labels files that do
	  not exist. Probably is just unpopulated memory banks.

	* src/etc/labels.db : Add Supermicro H8QME.

	* : tag version 0.6. 

2006-10-13 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl : Fix bug in labels.db parsing which required
	  at least one comma to be used after each DIMM label.

	* src/util/edact-ctl : Allow whitespace separated vendor and model
	  to --mainboard= as well as colon separated values.

	* src/etc/labels.db : Add Supermicro H8DCE.

	* : tag version 0.5.

2006-05-10 Mark Grondona <mgrondona@llnl.gov>
